    - Graphics::dim() draws to correct dimensions.
    - GraphicsPort::dim() clips properly.
    - BitmapButton::getPreferredDimensions() returns the correct size.
    - AnimButton::getPreferredDimensions() returns the correct size.
    - Anim button animation continues playing correctly when clicked if
      disabled.
    - ListBox::getPreferredDimensions() returns the correct size.
  
  - New Features:
    - Removed getEditableData() bodge from bitmap classes; all interaction with
      bitmap data happens through bitmap methods.
    - SDL framebuffer code merged into FrameBuffer class.
    - Added label test.
    - Added button test.
    - Added DOS batch files to build examples and tests.
    - Added grayScale() function to GraphicsUnclipped, Graphics and
      GraphicsPort.
    - BitmapButton greys out when disabled.
    - Added bitmapbutton test.
    - Added drawBitmapGreyScale() function to GraphicsUnclipped, Graphics and
      GraphicsPort.
    - AnimButton greys out when disabled.
    - Added animbutton test.
    - Added listbox test.


  V0.40 (20091115)
  
  - First alpha release.
  
  - Fixes:
    - PALib support removed.
    - Pointer to selected day button in calendar resets to NULL when new month
      selected; prevents day button incorrectly popping up if same button is
      clicked in new month.
    - Calendar::getPreferredSize() returns valid values.
    - Label text is greyed out when disabled.
    - Huge speed increase in Calendar::resize().
    - Calendar's child controls correctly fill entire available space.
    - Calendar correctly selects date if new day is the same as old day but in
      a different month.
    - Gadget drag event only raised if stylus is actually moved whilst dragging
      mode active.
    - ScrollingPanel drag and scroll events only raised if stylus is actually
      moved whilst dragging mode active.
    - MultiLineTextBox greys out text when disabled.